--- a/config/locales/fr-FR/help/management-products_create.txt
+++ b/config/locales/fr-FR/help/management-products_create.txt
@@ -4,7 +4,7 @@ h1. Comment ajouter un nouveau produit?
 
 * Le nom du produit doit être différent pour chaque produit.
 
-
+* Les informations concernant la *gestion des stocks* sont facultatives. Dans le cas ou pour un produit vous ne désirez pas gérer ses stocks, il vous suffit de cocher "Ne nécessite pas de gestion des stocks" et les informations relatives à la gestion des stocks ne seront plus demandées. Dans le cas contraire, renseignez les quantités vous servant de base à votre gestion de stocks (minimum, minimum critique, maximum) et le *lieu de stockage* auxquelles sont rattachées ces valeurs si vous possédez plusieurs lieux de stockage.
 
 <<management-index|Retour à l'aide sur la Gestion Commerciale>>
 
