--- a/config/locales/fr-FR/help/management-stocks.txt
+++ b/config/locales/fr-FR/help/management-stocks.txt
@@ -1,6 +1,6 @@
 h1. Comment consulter l'état des stocks?
 
-Sélectionnez tout d'abord un lieu de stockage. 
+Sélectionnez tout d'abord un lieu de stockage si vous en possédez plusieurs. 
 
 Ensuite vous avez accès à un détail de tous vos produits, ainsi que de l'état actuel des stocks, réel et virtuel.
 * Le *stock réel* représente la quantité de produit dont vous diposez, sans prendre en compte les eventuelles livraisons en attente d'expédition ou les commandes en attente de réception.
@@ -13,6 +13,6 @@ Les différents jeux de couleurs vous permettent en un seul coup d'oeil de conna
 
 *L'état des stock*, représenté par la couleur, *est calculé à partir du stock virtuel*.
 
-Vous pouvez définir les quantités stock minimum, stock minimum critique et stock maximum dans le formulaire de création/modification d'un produit.
+Vous pouvez *définir les quantités* stock minimum, stock minimum critique et stock maximum dans le formulaire de création/modification d'un produit. Ces quantités peuvent être *renseignées spécifiquement pour chaque lieu de stockage*.
 
 <<management-index|Retour à l'aide sur la Gestion Commerciale>>
