git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@595 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -334,6 +334,9 @@ fr-FR:
         id: Journal
         name: Nom
         nature: Nature
+      journal_period:
+        journal_id: Journal
+        financialyear_id: Exercice
       payment: 
         account_id: Compte associé 
         amount: Montant
