--- a/config/locales/fr-FR/help/management-index.txt
+++ b/config/locales/fr-FR/help/management-index.txt
@@ -6,12 +6,13 @@ Il est bon d'avoir au préalable enregistré ses clients et fournisseurs grâce 
 h2. Comment gérer ses achats et ses ventes ?
 * La gestion commerciale fait le lien avec les relations clients/fournisseurs en vous permettant de choisir, lors d'achats ou de ventes, les clients ou les fournisseurs que vous avez préalablement enregistrés par le biais des fiches.
 * Vous pouvez consulter l'ensemble des achats et ventes effectués à vos différents clients et fournisseurs.
-* Les achats et les ventes permettent la création de documents tels que des devis, commandes, factures, qu'il est possible de sauvegarder et d'imprimer.
+* Les achats et les ventes permettent la création de *documents* tels que des devis, commandes, factures, qu'il est possible de sauvegarder et d'imprimer.
 
 h2. Comment gérer ses stocks ?
 * La première étape consiste à enregistrer ses *lieux de stockage*. L'affichage d'un lieu de stockage permet d'enregistrer des *mouvements de stocks*.
-* Les mouvements de stocks permettent de faire l'inventaire comptable permanent qui est est une organisation des comptes de stocks permettant de connaître de façon constante, en cours d'exercice, les *existants chiffrés* en quantités et en valeur. Les mouvements de stocks sont *créé.Vous avez également la possibilité de paramétrer des informations telles que les types de *délais* et les *types de vente* ou les *catégories de produits*. Autant de paramètres qui vous permettent d'affiner et de *personnaliser* votre gestion commerciale.
+* Les mouvements de stocks permettent de faire l'inventaire comptable permanent qui est est une organisation des comptes de stocks permettant de connaître de façon constante, en cours d'exercice, les *existants chiffrés* en quantités et en valeur. Les mouvements de stocks sont *créés automatiquement* lors d'*achats*, de *ventes*, expéditions de *livraisons*, receptions de *commandes*.
+* Vous avez également la possibilité de paramétrer des informations telles que les types de *délais*, de *vente* ou de *paiement*, ou les *catégories de produits*. Autant de paramètres qui vous permettent d'affiner et de *personnaliser* votre gestion commerciale.
 
 h2. Le tableau de bord
-* Il vous permet en un coup d'oeil d'avoir accès aux événements pouvant nécessiter un traitement rapide de votre part, ou à des informations générales.
-* Il comporte également les éventuels produits pour lesquels le niveau de stock est sous le seuil minimum critique.
+* Il vous permet en un coup d'oeil d'avoir accès aux *événements* pouvant nécessiter un traitement rapide de votre part, ou à des *informations* générales.
+* Il comporte également les éventuels produits pour lesquels le *niveau de stock* est *sous le seuil minimum critique*.
