--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -279,7 +279,7 @@ fr-FR:
         language_id: Langue
         name: Nom
         nature_id: Type
-        employee_id: Intermédiaire
+        employee_id: Représentant
         payments_number: Nombre de paiements
         reduction_rate: Taux de réduction
         reflation_submissive: Soumis à la relance
