--- a/config/locales/fr-FR.management.yml
+++ b/config/locales/fr-FR.management.yml
@@ -174,6 +174,7 @@ fr-FR:
         lines: Lignes de la commande
         amount: Montant HT
         amount_with_taxes: Montant TTC
+        purchase_order_line_create: Ajouter un produit à la commande
         purchases: Consulter la liste des achats
         order_print: Imprimer la commande
         validate: Valider la commande
