git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@606 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.management.yml
+++ b/config/locales/fr-FR.management.yml
@@ -204,6 +204,7 @@ fr-FR:
         deliveries: Livraisons
         estimate_to_order: Passer le devis en commande
         lines: Lignes du devis
+        sale_order_line_create: Ajouter un produit au devis
         sales_print: Imprimer le devis
         title: 'Sélection des produits pour le devis {{sale_order}} de : {{client}}'
         total: Total
