--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -601,6 +601,7 @@ fr-FR:
     # Authentication
     authentication:
       login:
+        download_firefox: 'Aller sur la page de téléchargement de Firefox'
         title: ''
         username: 'Nom d''utilisateur'
         password: 'Mot de passe'
