git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@635 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -859,6 +859,8 @@ fr-FR:
           one: '1 employé enregistré'
           other: '{{count}} employés enregistrés'
         create: 'Créer un nouvel employé'
+      _employees_form:
+        select_user: '--- Sans utilisateur ---'
       _employees_search:
         title: 'Recherche'
         search: 'Rechercher un employé'
