--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -995,12 +995,13 @@ fr-FR:
         bank: Banque
         various: Opérations diverses
     journal_period:
+      error_out_of_range: 'est en dehors de l''intervalle de temps de l''exercice (du {{started_on}} au {{stopped_on}})'
       error_period: 'L''intervalle de temps est incorrect pour la période.'	
       error_closed_journal: 'Vous ne pouvez pas ajouter de pièces comptables à cette date  car le journal est clôturé au {{value}}.'
       error_closed_financialyear: 'L''année financière est déjà terminée.'
       error_limited_financialyear: 'L''année financière sera déjà terminée à la fin de la période.'
     journal_record:
-      error_printed_date: 'La pièce comptabilisée n''existe pas.'
+      error_printed_date: 'La date de la pièce doit être antérieure ou égale à la date de création de la pièce.'
       error_closed_journal: 'Le journal est clôturé donc vous ne pouvez plus ajouter de pièces.' 
       error_limited_financialyear: 'L''ajout de pièce est limité à une année financière donnée.'
       error_limited_period: 'L''ajout de pièce est limité à une période donnée.'
