--- a/config/locales/fr-FR/help/management-product_components_create.txt
+++ b/config/locales/fr-FR/help/management-product_components_create.txt
@@ -3,7 +3,7 @@ h1. La création d'un composant
 Sélectionnez le produit et la quantité qui compose votre produit, (une bouteille de vin contient 0.75 litre de vin, le composant est le vin d'une quantité de 0.75 litre), ainsi que le lieu de stockage correspondant au composant.
 
 
-{help/product_components.png|produit composé}}
+p=. {{help/product_components.png|produit composé}}
 
 
 <<management-index|Retour à l'aide sur la Gestion Commerciale>>
