--- a/config/locales/fr-FR/help/production-productions_create.txt
+++ b/config/locales/fr-FR/help/production-productions_create.txt
@@ -4,8 +4,7 @@ h1. Comment créer une production ?
 
 * Si vous décidez de produire un produit qui possède des composants, des *mouvements de stocks* seront crées pour ce produit ainsi que pour *tous ses composants*.
 
-
-{{help/product_components.png|produit composé}}
+p=. {{help/product_components.png|produit composé}}
 
 
 <<production-index|Retour à l'aide sur la Gestion de la production>>
