git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@662 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -247,11 +247,15 @@ fr-FR:
         expression: Expression
         name: Nom
       delivery:
+        amount: Montant HT
+        amount_with_taxes: Montant TTC
         contact_id: Adresse du client
+        delivered_on: Reçu le
+        moved_on: Fait le
         nature: Type
         planned_on: Prévue le
         shipped_on: Envoyé le
-        delivered_on: Reçu le
+        type: Type
       department:
         name: Nom
         comment: Commentaire
