git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@663 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -251,7 +251,7 @@ fr-FR:
         amount_with_taxes: Montant TTC
         contact_id: Adresse du client
         delivered_on: Reçu le
-        moved_on: Fait le
+        moved_on: Faite le
         nature: Type
         planned_on: Prévue le
         shipped_on: Envoyé le
