--- a/config/locales/fr-FR/help/management-sales.txt
+++ b/config/locales/fr-FR/help/management-sales.txt
@@ -2,9 +2,9 @@ h1. Comment consulter la liste des ventes?
 
 * La liste des ventes répertorie toutes les ventes réalisées a vos différents clients.
 
-* Le numéro est celui de la vente et est un lien vous redirigeant vers le récapitulatif du devis ou de la commande et vous permettant de le consulter et éventuellement de le modifier.
+* Le numéro est celui de la vente et est un lien vous redirigeant vers le récapitulatif détaillé de la vente.
 
-* Le nom du fournisseur est un lien vous redirigeant vers la fiche fournisseur considérée
+* Le nom du client est un lien vous redirigeant vers la fiche client considérée.
 
 
 <<management-index|Retour à l'aide sur la Gestion Commerciale>>
