--- a/config/locales/fr-FR/help/relations-entities_display.txt
+++ b/config/locales/fr-FR/help/relations-entities_display.txt
@@ -1,4 +1,6 @@
-h1. L'affichage d'une fiche 
+h1. L'affichage d'une fiche
+
+h2. Informations concernant la fiche 
 Vous avez ici accès à toutes les informations relatives à votre client ou votre fournisseur:
 * les informations saisies lors de sa création, auxquelles s'ajoutent éventuellement les différents champs personnalisés
 * ses coordonnées, ses adresses. Un client ou fournisseur peut en posséder plusieurs.
@@ -10,5 +12,7 @@ Vous avez également la possibilité de :
 
 Vous ne pouvez pas supprimer une option de liste déroulante.
 
+h2. Informations concernant les ventes
+Si votre fiche concerne un client, vous avez accès au récapitulatif des *5 dernières ventes* effectuées à ce client, ainsi qu'au *nombre total de vente* pour ce client. En cliquant sur le numéro de la vente, vous serez redirigé vers le récapitulatif détaillé de cette vente. 
 
 <<relations-index|Revenir à l'aide de gestion des relations >>
