git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@670 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR/help/management-delays_display.txt
+++ b/config/locales/fr-FR/help/management-delays_display.txt
@@ -1,5 +1,5 @@
-h1. L'affichage d'un délai : 
+h1. Délai
 
-L'affichage d'un délai récapitule les différentes informantions liées à ce délai.
+L'affichage d'un délai récapitule les différentes informations liées à ce délai.
 
 <<management-index|Retour à l'aide sur la Gestion Commerciale>>
