--- a/config/locales/fr-FR/help/accountancy-accounts.txt
+++ b/config/locales/fr-FR/help/accountancy-accounts.txt
@@ -1,6 +1,6 @@
 h1. Comptes comptables
 
-h2. Qu'est-ce qu'un compte comptable ?
+h2. Qu'est-ce qu'un compte comptable~?
 Il s'agit d'un compte (bancaire ou autres ...) dans lequel sont enregistrés les évènements économiques et 
 financiers de l'entreprise. Un compte comptable est défini par un numéro et un intitulé en conformité avec le plan comptable général.
 
