--- a/config/locales/fr-FR/help/management-sale_order_natures.txt
+++ b/config/locales/fr-FR/help/management-sale_order_natures.txt
@@ -1,7 +1,6 @@
-h1. Les types de vente :
+h1. Types de vente
 
-Les types de vente permettent de *définir des caractéristiques à une vente*, telles que: le délai d'expiration, le délai de paiement, les accomptes...
-
+Les types de vente permettent de *définir des caractéristiques des venteq*, telles que~: le délai d'expiration, le délai de paiement, les accomptes...
 
 Vous pouvez
 * *créer* un type de vente
